add automatic library scan config options
