# server/immich-openapi-specs.json
@@ -7982,6 +7982,9 @@
           "job": {
             "$ref": "#/components/schemas/SystemConfigJobDto"
           },
+          "libraryScan": {
+            "$ref": "#/components/schemas/SystemConfigLibraryScanDto"
+          },
           "machineLearning": {
             "$ref": "#/components/schemas/SystemConfigMachineLearningDto"
           },
@@ -8017,7 +8020,8 @@
           "storageTemplate",
           "job",
           "thumbnail",
-          "trash"
+          "trash",
+          "libraryScan"
         ],
         "type": "object"
       },
@@ -8148,6 +8152,21 @@
           "recognizeFaces",
           "sidecar",
           "library"
+        ],
+        "type": "object"
+      },
+      "SystemConfigLibraryScanDto": {
+        "properties": {
+          "cronExpression": {
+            "type": "string"
+          },
+          "enabled": {
+            "type": "boolean"
+          }
+        },
+        "required": [
+          "enabled",
+          "cronExpression"
         ],
         "type": "object"
       },
