# server/src/domain/system-config/dto/system-config.dto.ts
@@ -1,3 +1,4 @@
+import { SystemConfigLibraryScanDto, SystemConfigThumbnailDto, SystemConfigTrashDto } from '@app/domain/system-config';
 import { SystemConfig } from '@app/infra/entities';
 import { Type } from 'class-transformer';
 import { IsObject, ValidateNested } from 'class-validator';
@@ -9,8 +10,6 @@ import { SystemConfigOAuthDto } from './system-config-oauth.dto';
 import { SystemConfigPasswordLoginDto } from './system-config-password-login.dto';
 import { SystemConfigReverseGeocodingDto } from './system-config-reverse-geocoding.dto';
 import { SystemConfigStorageTemplateDto } from './system-config-storage-template.dto';
-import { SystemConfigThumbnailDto } from './system-config-thumbnail.dto';
-import { SystemConfigTrashDto } from './system-config-trash.dto';
 
 export class SystemConfigDto implements SystemConfig {
   @Type(() => SystemConfigFFmpegDto)
@@ -62,6 +61,10 @@ export class SystemConfigDto implements SystemConfig {
   @ValidateNested()
   @IsObject()
   trash!: SystemConfigTrashDto;
+
+  @Type(() => SystemConfigLibraryScanDto)
+  @IsObject()
+  libraryScan!: SystemConfigLibraryScanDto;
 }
 
 export function mapConfig(config: SystemConfig): SystemConfigDto {
